sesiones guiadas/calcualdora prueba bison/calculadora.output
Gramática

    0 $accept: entrada $end

    1 entrada: inicializar lista

    2 inicializar: ε

    3 lista: linea
    4      | lista linea

    5 linea: expresion ";"
    6      | "registro" "=" expresion ";"

    7 expresion: expresion "+" termino
    8          | expresion "-" termino
    9          | termino

   10 termino: termino "*" factor
   11        | termino "/" factor
   12        | factor

   13 factor: "(" expresion ")"
   14       | "numero"
   15       | "-" factor
   16       | "registro"


Terminales con las reglas donde aparecen

    $end (0) 0
    error (256)
    "+" (258) 7
    "-" (259) 8 15
    "*" (260) 10
    "/" (261) 11
    ")" (262) 13
    "(" (263) 13
    "numero" <entero> (264) 14
    ";" (265) 5 6
    "=" (266) 6
    "registro" <cadena> (267) 6 16


No terminales con las reglas donde aparecen

    $accept (13)
        on left: 0
    entrada (14)
        on left: 1
        on right: 0
    inicializar (15)
        on left: 2
        on right: 1
    lista (16)
        on left: 3 4
        on right: 1 4
    linea (17)
        on left: 5 6
        on right: 3 4
    expresion <entero> (18)
        on left: 7 8 9
        on right: 5 6 7 8 13
    termino <entero> (19)
        on left: 10 11 12
        on right: 7 8 9 10 11
    factor <entero> (20)
        on left: 13 14 15 16
        on right: 10 11 12 15


Estado 0

    0 $accept: • entrada $end

    $default  reduce usando la regla 2 (inicializar)

    entrada      ir al estado 1
    inicializar  ir al estado 2


Estado 1

    0 $accept: entrada • $end

    $end  desplazar e ir al estado 3


Estado 2

    1 entrada: inicializar • lista

    "-"         desplazar e ir al estado 4
    "("         desplazar e ir al estado 5
    "numero"    desplazar e ir al estado 6
    "registro"  desplazar e ir al estado 7

    lista      ir al estado 8
    linea      ir al estado 9
    expresion  ir al estado 10
    termino    ir al estado 11
    factor     ir al estado 12


Estado 3

    0 $accept: entrada $end •

    $default  aceptar


Estado 4

   15 factor: "-" • factor

    "-"         desplazar e ir al estado 4
    "("         desplazar e ir al estado 5
    "numero"    desplazar e ir al estado 6
    "registro"  desplazar e ir al estado 13

    factor  ir al estado 14


Estado 5

   13 factor: "(" • expresion ")"

    "-"         desplazar e ir al estado 4
    "("         desplazar e ir al estado 5
    "numero"    desplazar e ir al estado 6
    "registro"  desplazar e ir al estado 13

    expresion  ir al estado 15
    termino    ir al estado 11
    factor     ir al estado 12


Estado 6

   14 factor: "numero" •

    $default  reduce usando la regla 14 (factor)


Estado 7

    6 linea: "registro" • "=" expresion ";"
   16 factor: "registro" •

    "="  desplazar e ir al estado 16

    $default  reduce usando la regla 16 (factor)


Estado 8

    1 entrada: inicializar lista •
    4 lista: lista • linea

    "-"         desplazar e ir al estado 4
    "("         desplazar e ir al estado 5
    "numero"    desplazar e ir al estado 6
    "registro"  desplazar e ir al estado 7

    $default  reduce usando la regla 1 (entrada)

    linea      ir al estado 17
    expresion  ir al estado 10
    termino    ir al estado 11
    factor     ir al estado 12


Estado 9

    3 lista: linea •

    $default  reduce usando la regla 3 (lista)


Estado 10

    5 linea: expresion • ";"
    7 expresion: expresion • "+" termino
    8          | expresion • "-" termino

    "+"  desplazar e ir al estado 18
    "-"  desplazar e ir al estado 19
    ";"  desplazar e ir al estado 20


Estado 11

    9 expresion: termino •
   10 termino: termino • "*" factor
   11        | termino • "/" factor

    "*"  desplazar e ir al estado 21
    "/"  desplazar e ir al estado 22

    $default  reduce usando la regla 9 (expresion)


Estado 12

   12 termino: factor •

    $default  reduce usando la regla 12 (termino)


Estado 13

   16 factor: "registro" •

    $default  reduce usando la regla 16 (factor)


Estado 14

   15 factor: "-" factor •

    $default  reduce usando la regla 15 (factor)


Estado 15

    7 expresion: expresion • "+" termino
    8          | expresion • "-" termino
   13 factor: "(" expresion • ")"

    "+"  desplazar e ir al estado 18
    "-"  desplazar e ir al estado 19
    ")"  desplazar e ir al estado 23


Estado 16

    6 linea: "registro" "=" • expresion ";"

    "-"         desplazar e ir al estado 4
    "("         desplazar e ir al estado 5
    "numero"    desplazar e ir al estado 6
    "registro"  desplazar e ir al estado 13

    expresion  ir al estado 24
    termino    ir al estado 11
    factor     ir al estado 12


Estado 17

    4 lista: lista linea •

    $default  reduce usando la regla 4 (lista)


Estado 18

    7 expresion: expresion "+" • termino

    "-"         desplazar e ir al estado 4
    "("         desplazar e ir al estado 5
    "numero"    desplazar e ir al estado 6
    "registro"  desplazar e ir al estado 13

    termino  ir al estado 25
    factor   ir al estado 12


Estado 19

    8 expresion: expresion "-" • termino

    "-"         desplazar e ir al estado 4
    "("         desplazar e ir al estado 5
    "numero"    desplazar e ir al estado 6
    "registro"  desplazar e ir al estado 13

    termino  ir al estado 26
    factor   ir al estado 12


Estado 20

    5 linea: expresion ";" •

    $default  reduce usando la regla 5 (linea)


Estado 21

   10 termino: termino "*" • factor

    "-"         desplazar e ir al estado 4
    "("         desplazar e ir al estado 5
    "numero"    desplazar e ir al estado 6
    "registro"  desplazar e ir al estado 13

    factor  ir al estado 27


Estado 22

   11 termino: termino "/" • factor

    "-"         desplazar e ir al estado 4
    "("         desplazar e ir al estado 5
    "numero"    desplazar e ir al estado 6
    "registro"  desplazar e ir al estado 13

    factor  ir al estado 28


Estado 23

   13 factor: "(" expresion ")" •

    $default  reduce usando la regla 13 (factor)


Estado 24

    6 linea: "registro" "=" expresion • ";"
    7 expresion: expresion • "+" termino
    8          | expresion • "-" termino

    "+"  desplazar e ir al estado 18
    "-"  desplazar e ir al estado 19
    ";"  desplazar e ir al estado 29


Estado 25

    7 expresion: expresion "+" termino •
   10 termino: termino • "*" factor
   11        | termino • "/" factor

    "*"  desplazar e ir al estado 21
    "/"  desplazar e ir al estado 22

    $default  reduce usando la regla 7 (expresion)


Estado 26

    8 expresion: expresion "-" termino •
   10 termino: termino • "*" factor
   11        | termino • "/" factor

    "*"  desplazar e ir al estado 21
    "/"  desplazar e ir al estado 22

    $default  reduce usando la regla 8 (expresion)


Estado 27

   10 termino: termino "*" factor •

    $default  reduce usando la regla 10 (termino)


Estado 28

   11 termino: termino "/" factor •

    $default  reduce usando la regla 11 (termino)


Estado 29

    6 linea: "registro" "=" expresion ";" •

    $default  reduce usando la regla 6 (linea)
